# RFNoC-HLS-NeuralNet

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.md  README.md  TODO.md  cross-compile-syntax.txt
cmake/: setupenv.sh
cmake/Modules/: Findfpga.cmake  ettusConfig.cmake  fpgannetConfig.cmake  machlearnConfig.cmake
docs/: README.fpgannet  README.machlearn
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: modrec_data_input.s16  nnet_debug_processor.grc  nnet_example_1layer.grc  nnet_example_modrec.grc  nnet_example_modrec_raster.grc  nnet_example_modrec_udp.grc
grc/: CMakeLists.txt  fpgannet_ex1layer.xml  fpgannet_exmodrec.xml  fpgannet_keras1layer.xml  fpgannet_keras3layer.xml  nnet_softmax.xml
include/fpgannet/: CMakeLists.txt  api.h  ex1layer.h  ex1layer_block_ctrl.hpp
include/machlearn/: CMakeLists.txt  api.h
lib/: CMakeLists.txt  ex1layer_block_ctrl_impl.cpp  ex1layer_impl.cc  ex1layer_impl.h  qa_fpgannet.cc  qa_fpgannet.h  qa_machlearn.cc  qa_machlearn.h  test_fpgannet.h  test_machlearn.cc
python/: CMakeLists.txt  __init__.py  nnet_softmax.py  qa_ex1layer.py  save_data_file.py
rfnoc/: Makefile.inc  README.md
rfnoc/blocks/: CMakeLists.txt  ex1layer.xml  exmodrec.xml  keras1layer.xml  keras3layer.xml
rfnoc/fpga-src/: Makefile.inc  Makefile.srcs  nnet_vector_wrapper.v  noc_block_addsub.v  noc_block_ex1layer.v  noc_block_exmodrec.v  noc_block_firhls.v  noc_block_keras1layer.v  noc_block_keras3layer.v  noc_block_testhls.v  packet_resizer_variable.v
rfnoc/hls/: .gitignore  Makefile.inc  README.md
rfnoc/hls/addsub/: Makefile.inc  README.txt  addsub.cpp  addsub.h  addsub_test.cpp  build_prj.tcl
rfnoc/hls/ex_1layer/: Makefile.inc  README.txt  build_prj.tcl  ex_1layer.cpp  ex_1layer.h  ex_1layer_test.cpp
rfnoc/hls/ex_2layer/: Makefile.inc  build_prj.tcl  ex_2layer.cpp  ex_2layer.h  ex_2layer_test.cpp
rfnoc/hls/ex_activations/: README.txt  build_prj.tcl  ex_activations.cpp  ex_activations.h  ex_activations_test.cpp
rfnoc/hls/ex_iqconv/: Makefile.inc  README.txt  build_prj.tcl  ex_iqconv.cpp  ex_iqconv.h  ex_iqconv_test.cpp
rfnoc/hls/ex_modrec/: Makefile.inc  README.txt  build_prj.tcl  ex_modrec.cpp  ex_modrec.h  ex_modrec_test.cpp
rfnoc/hls/fir_hls/: Makefile.inc  README.txt  build_prj.tcl  fir_hls.cpp  fir_hls.h  fir_test.cpp
rfnoc/hls/keras_1layer/: Makefile.inc  README.md  build_prj.tcl  keras-1layer-config.yml  keras_1layer_test.cpp
rfnoc/hls/keras_3layer/: Makefile.inc  README.md  build_prj.tcl  keras-3layer-config.yml  keras_3layer_test.cpp
rfnoc/hls/nnet_2layer/: build_prj.tcl  nnet_2layer.cpp  nnet_2layer.h  nnet_2layer_test.cpp
rfnoc/ip/: Makefile.inc  README.md  build_prj.tcl
rfnoc/testbenches/: CMakeLists.txt  README.md
swig/: CMakeLists.txt  fpgannet_swig.i  machlearn_swig.i
(+77 files in other folders)
